<resources>
    <string name="app_name">Pokedex</string>
    <string name="Title">Title</string>
    <string name="PokemonImage">Pokemon Image</string>
    <string name="PokemonName">Pokemon Name</string>
    <string name="ID">#0001</string>
    <string name="BackIconImage">Back Icon Image</string>
    <string name="PokemonList">Pokemon List</string>
    <string name="PokemonType">Type</string>
    <string name="PokemonWeight">Weight</string>
    <string name="PokemonHeight">Height</string>
    <string name="Kg">kg</string>
    <string name="Meter">m</string>
    <string name="Hp">Hp</string>
    <string name="Att">Att</string>
    <string name="Def">Def</string>
    <string name="SpAtt">SpAtt</string>
    <string name="SpDef">SpDef</string>
    <string name="Speed">Speed</string>
    <string name="Grass">Grass</string>
    <string name="Water">Water</string>
    <string name="Fire">Fire</string>
    <string name="Electric">Electric</string>
    <string name="Poison">Poison</string>
    <string name="Psychic">Psychic</string>
    <string name="Ice">Ice</string>
    <string name="Flying">Flying</string>
    <string name="Rock">Rock</string>
    <string name="Bug">Bug</string>
    <string name="Steel">Steel</string>
    <string name="Normal">Normal</string>
    <string name="Fighting">Fighting</string>
    <string name="Ghost">Ghost</string>
    <string name="Dark">Dark</string>
    <string name="Ground">Ground</string>
    <string name="Dragon">Dragon</string>
    <string name="Fairy">Fairy</string>
</resources>