<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".PokemonPage">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPokemon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewPokemonImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/PokemonImage"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPokemonID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ID"
                    android:textColor="@color/default_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPokemonImage" />

                <TextView
                    android:id="@+id/textViewPokemonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/PokemonName"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPokemonID" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPokemonName">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewPokemonType1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:id="@+id/textViewPokemonType1"
                            android:layout_width="170sp"
                            android:layout_height="40sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/PokemonType"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewPokemonType2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:id="@+id/textViewPokemonType2"
                            android:layout_width="170sp"
                            android:layout_height="40sp"
                            android:gravity="center"
                            android:text="@string/PokemonType"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="2dp"
                    android:layout_height="0dp"
                    android:background="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout5" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <ImageView
                        android:id="@+id/imageViewPokemonWeight"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/PokemonImage"
                        android:src="@drawable/weight" />

                    <TextView
                        android:id="@+id/textViewPokemonWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="30sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/PokemonWeight"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
                    app:layout_constraintEnd_toStartOf="@+id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayout4">

                    <ImageView
                        android:id="@+id/imageViewPokemonHeight"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/PokemonImage"
                        android:src="@drawable/height" />

                    <TextView
                        android:id="@+id/textViewPokemonHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="30sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="@string/PokemonHeight"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/stat_view" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>